--- a/images/centos7-node10/Dockerfile
+++ b/images/centos7-node10/Dockerfile
@@ -1,14 +1,19 @@
-FROM centos:7.4.1708
+FROM centos:7.6.1810
 
 # =================================== EPEL
 RUN yum -y update; yum clean all && \
 	yum -y install epel-release; yum clean all
-	
+
 # =================================== Node
 RUN yum -y install curl
 RUN curl -sL https://rpm.nodesource.com/setup_10.x | bash -
 RUN yum -y install nodejs
 
 RUN node --version
-RUN npm --version 
+RUN npm --version
+
+# ==================================== AWS Cli
+RUN yum install -y python-pip && \
+	pip install --upgrade pip && \
+	pip install awscli --upgrade
 
