build: Add OpenSSL and Git

--- a/images/centos7-python3/Dockerfile
+++ b/images/centos7-python3/Dockerfile
@@ -1,8 +1,9 @@
 FROM centos:7.6.1810
 
-# =================================== EPEL
+# =================================== EPEL & Tools
 RUN yum -y update; yum clean all && \
     yum -y install epel-release; yum clean all
+RUN yum install -y openssl git
 
 # =================================== Python
 RUN yum -y install gcc openssl-devel bzip2-devel libffi-devel wget make
