--- a/images/centos7-java8/Dockerfile
+++ b/images/centos7-java8/Dockerfile
@@ -3,7 +3,7 @@ FROM centos:7.6.1810
 # =================================== EPEL & Tools
 RUN yum -y update; yum clean all && \
 	yum -y install epel-release; yum clean all
-RUN yum install -y openssl git
+RUN yum install -y openssl git tree jq
 
 # ==================================== Java 8
 RUN yum -y install java-1.8.0-openjdk-devel
