--- a/images/centos7/docker-compose.test.yml
+++ b/images/centos7/docker-compose.test.yml
@@ -9,5 +9,14 @@ sut:
     python --version &&
     pip --version &&
     git --version &&
-    aws --version
+    aws --version &&
+    openssl version &&
+    ssh -V &&
+    tree --version &&
+    jq --version &&
+    zip -h &&
+    unzip -h &&
+    wget --version &&
+    curl --version &&
+    ./sonar-scanner/bin/sonar-scanner -h
     "
