--- a/images/centos7/docker-compose.test.yml
+++ b/images/centos7/docker-compose.test.yml
@@ -10,6 +10,7 @@ sut:
     pip --version &&
     git --version &&
     aws --version &&
+    mvn --version &&
     openssl version &&
     ssh -V &&
     tree --version &&
