--- a/images/centos7-python3/docker-compose.test.yml
+++ b/images/centos7-python3/docker-compose.test.yml
@@ -2,8 +2,14 @@ sut:
   build: .
   command: >
     bash -c "
-    python --version &&
-    pip --version &&
     git --version &&
-    aws --version
+    aws --version &&
+    openssl version &&
+    ssh -V &&
+    tree --version &&
+    jq --version &&
+    zip -h &&
+    unzip -h &&
+    wget --version &&
+    curl --version &&
     "
