--- a/images/centos7-node10/Dockerfile
+++ b/images/centos7-node10/Dockerfile
@@ -3,7 +3,7 @@ FROM centos:7.6.1810
 # =================================== EPEL & Tools
 RUN yum -y update; yum clean all && \
 	yum -y install epel-release; yum clean all
-RUN yum install -y openssl openssh-client git tree jq zip unzip libxml2-utils
+RUN yum install -y openssl openssh-client git tree jq zip unzip libxml2-utils wget curl
 
 # =================================== Node
 RUN yum -y install curl
@@ -15,3 +15,9 @@ RUN yum install -y python-pip && \
 	pip install --upgrade pip && \
 	pip install awscli --upgrade
 
+# ==================================== Sonar Cli
+RUN curl -o scanner.zip 'https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.0.0.1744-linux.zip'
+RUN unzip scanner.zip
+RUN mv sonar-scanner-4.0.0.1744-linux sonar-scanner
+RUN chmod +x sonar-scanner/bin/sonar-scanner
+RUN rm -rf scanner.zip
